# vertex_ai_hackathon

./: .gitignore  Cargo.toml
python/: app.py  app_cli.py
python/chainlit/: app.py
src/: crawl_links.rs  main.rs
