[package]
name = "vertex_ai_hackathon"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
headless_chrome = "1.0.9"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
tokio = {version = "1.37.0", features = ["macros", "rt-multi-thread", "sync","time"] }
urlencoding = "2.1.3"
